# playing-with-servant

./: README.md  playing-with-servant.cabal  stack.yaml
src/: Authentication.hs  Client.hs  Docs.hs  Javascript.hs  Lib.hs  Server.hs
static-files/: bar.txt  foo.txt
