--
-- Cabal configuration for ‘playing-with-servant’ package.
--
-- Copyright © 2016 Mark Karpov <markkarpov@openmailbox.org>
--
-- Redistribution and use in source and binary forms, with or without
-- modification, are permitted provided that the following conditions are
-- met:
--
-- * Redistributions of source code must retain the above copyright notice,
--   this list of conditions and the following disclaimer.
--
-- * Redistributions in binary form must reproduce the above copyright
--   notice, this list of conditions and the following disclaimer in the
--   documentation and/or other materials provided with the distribution.
--
-- * Neither the name Mark Karpov nor the names of contributors may be used
--   to endorse or promote products derived from this software without
--   specific prior written permission.
--
-- THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS “AS IS” AND ANY
-- EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-- WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-- DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDERS BE LIABLE FOR ANY
-- DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
-- DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
-- OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
-- HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
-- STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
-- ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-- POSSIBILITY OF SUCH DAMAGE.

name:                 playing-with-servant
version:              0.1.0
cabal-version:        >= 1.10
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov@openmailbox.org>
maintainer:           Mark Karpov <markkarpov@openmailbox.org>
homepage:             https://github.com/mrkkrp/playing-with-servant
bug-reports:          https://github.com/mrkkrp/playing-with-servant/issues
category:             Web
synopsis:             A project to familiarize myself with Servant web-framework
build-type:           Simple
description:          A project to familiarize myself with Servant web-framework.
extra-source-files:   CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/playing-with-servant.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  hs-source-dirs:     src
  build-depends:      base             >= 4.8 && < 5
                    , aeson
                    , aeson-compat
                    , attoparsec
                    , base-compat
                    , blaze-html
                    , blaze-markup
                    , bytestring
                    , directory
                    , http-media
                    , lucid
                    , mtl
                    , servant >= 0.7
                    , servant-server >= 0.7
                    , servant-lucid >= 0.7
                    , servant-blaze >= 0.7
                    , string-conversions
                    , text
                    , time
                    , wai
                    , warp
  default-extensions: RecordWildCards
                    , TupleSections
  exposed-modules:    Server
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

executable playing-with-servant
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base             >= 4.8 && < 5
                    , playing-with-servant
  default-extensions: RecordWildCards
                    , TupleSections
  if flag(dev)
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  else
    ghc-options:      -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

test-suite tests
  main-is:            Main.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.8 && < 5
                    , playing-with-servant >= 0.1.0
  default-extensions: RecordWildCards
                    , TupleSections
  if flag(dev)
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  else
    ghc-options:      -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
